* Simple EL Support: For Tags derived from MyFacesTag you can use "${expr}"
  Syntax. The given expr is evaluated via ValueBinding.
* Dynamic validators (i.e. validators added during runtime) are now supported
  by MinimizingStateSaver.
* getValidator() in ApplicationImpl returned always the same validator
  instance: fixed.
* Support for converter attributes "dateStyle", "formatPattern", etc.

----------------------------------------------------------------------
Changes in Release 0.4.1
* VariableResolverImpl resolves implicit objects
* <navigation_item> does no longer have a treeId. Use action attribute and
  appropriate NavigationRules instead.
* fixed Tomcat 4.1.x Tag related issues
* fixed FacesConfigEntityResolver to be more "compatible"

----------------------------------------------------------------------
Changes in Release 0.4.0
* Many, many changes to catch up with current Spec. 1.0 PRD2 (= Early access release 4)

----------------------------------------------------------------------
Changes in Release 0.3.3
* Stylesheet support for navigation-menu along with implementing a lots of other common attributes
* Validators added
* DataRenderer works standalone now (before it just could be used within a List)

----------------------------------------------------------------------
Changes in Release 0.3.2

* some serious bugs fixed (Tomcat 4.1.x issues)
* UIFileUpload with FileUploadRenderer and FileUploadTag
* new "File upload" example
* added com.oreilly.servlet package cos.jar:
   - Base64 encoding instead of MimeUtility from mail.jar
   - MultiPartFilter for the new UIFileUpload
* removed mail.jar: was only needed for Base64-Encoding
* web-application "tagunit" added (only CVS), can be used for testing myfaces-taglibs
* "enabledOnUserRole" and "visibleOnUserRole" attributes for miscellaneous input
  and command components
* "setBundle" tag
* "errors" tag renamed to "output_errors"
* "image" tag renamed to "graphic_image"