@@ -10,6 +10,7 @@ Changes in Release 0.4.2
 * getValidator() in ApplicationImpl returned always the same validator
   instance: fixed.
 * Support for converter attributes "dateStyle", "formatPattern", etc.
+* added Attribute activeItemClass to NavigationTag
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.1
